// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableBody /> ref should work 1`] = `
<tbody
  class="poodle-box poodle-table-body c0"
>
  <tr>
    <td>
      Table
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render Box props correctly 1`] = `
.c0 {
  margin-top: 20px;
}

<table>
  <tbody
    class="poodle-box poodle-table-body c0"
    id="id"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> should render TableBody correctly 1`] = `
<table>
  <tbody
    class="poodle-box poodle-table-body c0"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> should send context correctly 1`] = `
<table>
  <tbody
    class="poodle-box poodle-table-body c0"
  >
    <tr>
      <td>
        {"level":"body"}
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> theming should extend size styles 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  height: 100px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody
      class="poodle-box poodle-table-body c2"
    >
      <tr>
        <td>
          Table
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableBody /> theming should extend size styles with mode 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody
      class="poodle-box poodle-table-body c2"
    >
      <tr>
        <td>
          Table
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableBody /> theming should extend styles in global 1`] = `
.c0 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody
    class="poodle-box poodle-table-body c0"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> theming should extend styles in local 1`] = `
.c0 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody
    class="poodle-box poodle-table-body c0"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<table>
  <tbody
    class="poodle-box poodle-table-body c0"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableBody /> theming should render with default props correctly 1`] = `
<table>
  <tbody
    class="poodle-box poodle-table-body hello c0"
    id="id"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </tbody>
</table>
`;
